# firemark

./: CLI.md  Cargo.toml  LICENSE  README.md  build.rs
examples/config/: firemark.toml
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs  validators.rs
src/config/: loader.rs  merge.rs  mod.rs  types.rs
src/pipeline/: batch.rs  image_pipeline.rs  io.rs  mod.rs  pdf_pipeline.rs
src/render/: canvas.rs  color.rs  compositor.rs  font.rs  mod.rs  qr.rs  transform.rs
src/template/: mod.rs
src/watermark/: anti_ai.rs  background.rs  filigrane.rs  mod.rs  renderer.rs
src/watermark/effect/: ghost.rs  halftone.rs  mod.rs  noise.rs  watercolor.rs
src/watermark/pattern/: mod.rs  mosaic.rs  tile.rs  weave.rs
src/watermark/shape/: badge.rs  frame.rs  mod.rs  ribbon.rs  seal.rs
src/watermark/text/: diagonal.rs  handwritten.rs  mod.rs  redacted.rs  stamp.rs  stencil.rs  typewriter.rs
tests/: generate_examples.sh
