[package]
name = "firemark"
version = "0.1.0"
edition = "2021"
description = "Stop sending naked documents. Fast watermarking CLI for images and PDFs."
license = "MIT"
repository = "https://github.com/Vitruves/firemark"
keywords = ["watermark", "pdf", "image", "cli", "security"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
lopdf = "0.34"
qrcode = "0.14"
rayon = "1"
walkdir = "2"
anyhow = "1"
thiserror = "2"
csscolorparser = "0.7"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
env_logger = "0.11"
log = "0.4"
colored = "3"
rand = "0.8"
flate2 = "1"
